--- a/assignment4/src/main/resources/templates/admin/book.html
+++ b/assignment4/src/main/resources/templates/admin/book.html
@@ -24,11 +24,13 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
     top: 0;
     width: 100%; 
     height: 100%; 
-    overflow: auto; 
     padding-top: 60px;
     background-color: rgb(0,0,0); 
     background-color: rgba(0,0,0,0.8); 
  }
+ .text-center {
+     text-align: left;
+}
  .modal-content {
     background-color: #fefefe;
     margin: auto auto  auto 30%;
@@ -97,7 +99,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
                 <a href="#" onclick="showEditUserLogin()"><i class="icon_profile"></i>MY PROFILE</a>
               </li>
               <li>
-                <a href="#"><i class="icon_key_alt"></i>CHANGE PASSWORD</a>
+                <a href="#" onclick="document.getElementById('viewFormChangePasswordUserLogin').style.display = 'block'"><i class="icon_key_alt"></i>CHANGE PASSWORD</a>
               </li>
               <li>
                 <a href="/logout"><i class="icon_lock-open_alt"></i>Log Out</a>
@@ -236,8 +238,6 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
     </section>
   </section>
   
-  
-    
      <div id="viewFormEditBook" class="modal text-center">
            <form class="modal-content animate" id="formEditBook"  name="formEditBook">
            <div class="">
@@ -246,16 +246,16 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
            <br><h3>EDIT BOOK</h3><br>
         <table style=" width:100%"  class="">
          <tr>
-          <td><input type="hidden" id="idBookEdit" name="idBookEdit" autocomplete="idBookEdit"></td>
+          <td><input type="hidden" id="idBookEdit" name="idBookEdit" autocomplete="off"></td>
           <td><br></td>
          </tr>
          <tr>
-          <td><input type="hidden" id="idUserBookEdit" name="idUserBookEdit" autocomplete="idUserBookEdit"></td>
+          <td><input type="hidden" id="idUserBookEdit" name="idUserBookEdit" autocomplete="off"></td>
           <td><br></td>
          </tr>
         <tr>
           <td><label ><b>Title<span style="color: red">(*)</span></b></label></td>
-          <td><input autofocus type="text" name="titleEdit" id="titleEdit" class="form-control" autocomplete="titleEdit"></td>
+          <td><input autofocus type="text" name="titleEdit" id="titleEdit" class="form-control" autocomplete="off"></td>
          </tr>
           <tr>
           <td><br></td>
@@ -263,7 +263,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
          </tr>
          <tr>
           <td><label><b>Author<span style="color: red">(*)</span></b></label></td>
-          <td><input type="text" name="authorEdit" id="authorEdit" class="form-control" autocomplete="authorEdit"></td>
+          <td><input type="text" name="authorEdit" id="authorEdit" class="form-control" autocomplete="off"></td>
          </tr>
           <tr>
           <td><br></td>
@@ -295,119 +295,9 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
        </form>
     </div>
 
-<div id="viewFormSignUp" class="modal text-center">
-    <form class="modal-content animate" id="formSignUp"  name="formSignUp">
-        <div class="">
-            <button type="button" class="close" onclick="document.getElementById('viewFormSignUp').style.display='none'" >&times;</button>
-        </div>
-        <br><h3>SIGN UP</h3><br>
-        <table style=" width:100%"  class="">
-            <tr id="check">
-                <td><label><b>Email<span style="color: red">(*)</span></b></label></td>
-                <td><input autofocus type="email" onblur="return checkEmail()" name="emailSignUp" id="email" class="form-control" autocomplete="email"></td>
-            </tr>
-            <tr>
-                <td><br></td>
-                <td><br></td>
-            </tr>
-            <tr>
-                <td><label><b>Password<span style="color: red">(*)</span></b></label></td>
-                <td><input type="password" name="passwordSignUp" id="passwordSignUp" class="form-control" autocomplete="password"></td>
-            </tr>
-            <tr>
-                <td><br></td>
-                <td><br></td>
-            </tr>
-            <tr>
-                <td><label><b>Confirm password<span style="color: red">(*)</span></b></label></td>
-                <td><input type="password" name="rePasswordSignUp" id="rePasswordSignUp" class="form-control" autocomplete="rePassword"></td>
-            </tr>
-            <tr>
-                <td><br></td>
-                <td><br></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>
-                    <input type="submit" value="SIGN UP" class="btn btn-primary">
-                    <input type="reset" value="CANCEL" class="btn btn-danger"
-                           onclick="document.getElementById('viewFormSignUp').style.display='none'">
-                </td>
-            </tr>
-            <tr>
-                <td><br></td>
-                <td><br></td>
-            </tr>
-        </table>
-    </form>
-</div>
-
-    <div id="viewFormEditUserLogin" class="modal text-center" sec:authorize="hasAnyRole('ROLE_ADMIN','ROLE_USER')">
-           <form class="modal-content animate" id="formEditUserLogin" name="formEditUserLogin">
-           <div class="">
-						<button type="button" class="close" onclick="document.getElementById('viewFormEditUserLogin').style.display='none'" >&times;</button>
-			</div> 
-           <br><h3>PERSONAL INFORMATION</h3><br>
-          <!--  <p style="color: red">(*)Not be empty!</p> -->
-        <table style=" width:100%"  class="">
-        <tr>
-          <td><input type="hidden" id="idUserEditLogin" name="idUserEditLogin"></td>
-          <td><br></td>
-         </tr>
-         <tr>
-          <td><label><b>Email</b></label></td>
-          <td><input type="email" name="email" id="emailEditLogin" class="form-control" disabled="disabled" autocomplete="emailEdit"></td>
-         </tr>
-         <tr>
-	          <td><br></td>
-	          <td><br></td>
-         </tr>
-          <tr>
-          <td><label ><b>Role</b></label></td>
-          <td>
-          	<select name="idRole" id="idRoleEditLogin" disabled="disabled">
-          		<option value="2">User</option>
-          		<option value="1">Admin</option>
-          		
-          	</select>
-          </td>
-         </tr>
-         <tr>
-	          <td><br></td>
-	          <td><br></td>
-         </tr>
-        <tr>
-          <td><label ><b>FirstName</b></label></td>
-          <td><input autofocus type="text" name="firstName" id="firstNameEditLogin" class="form-control" autocomplete="firstName"></td>
-         </tr>
-         <tr>
-	          <td><br></td>
-	          <td><br></td>
-         </tr>
-         <tr>
-          <td><label ><b>LastName</b></label></td>
-          <td><input type="text" name="lastName" id="lastNameEditLogin" class="form-control" autocomplete="lastName"></td>
-         </tr>
-         <tr>
-	          <td><br></td>
-	          <td><br></td>
-         </tr>
-         <tr>
-          <td></td>
-          <td>
-            <input type="submit" value="UPDATE" class="btn btn-primary">
-            <input type="reset" value="CANCEL" class="btn btn-danger"
-              onclick="document.getElementById('viewFormEditUserLogin').style.display='none'">
-            
-          </td>
-         </tr>
-          <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-        </table>
-       </form>
-    </div>
+	<th:block th:include="/inc/formSignUp"></th:block>
+	<th:block th:include="/inc/formEditUserLogin"></th:block>
+    <th:block th:include="/inc/formChangePasswordUserLogin"></th:block>     
   
   <!-- container section end -->
   <!-- javascripts -->
@@ -420,7 +310,6 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
   <!--custome script for all page-->
   <script src="/resources/js/scripts.js"></script>
   
-  <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.js"></script>
   <script src="/resources/js/validate.js" type="text/javascript"></script>
   <script src="/resources/js/JsonUser.js" type="text/javascript"></script>
   <script src="/resources/js/JsonBook.js" type="text/javascript"></script> 
