--- a/assignment4/src/main/resources/templates/admin/detailBook.html
+++ b/assignment4/src/main/resources/templates/admin/detailBook.html
@@ -18,6 +18,36 @@
   <link href="/resources/css/style.css" rel="stylesheet">
   <link href="/resources/css/style-responsive.css" rel="stylesheet" />
 
+<style>
+.modal{
+    z-index:10;
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    padding-top: 60px;
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.8); 
+    
+ }
+ .text-center {
+     text-align: left;
+}
+ .modal-content {
+    background-color: #fefefe;
+    margin: auto auto  auto 30%;
+    width: 50%;
+    padding-right: 2%;
+    padding-left: 2%;
+    border-radius: 10px;
+    
+}
+.hidden {
+   display:none;
+}
+</style>
+
 </head>
 
 <body>
@@ -36,8 +66,8 @@
       <div class="top-nav notification-row">
         <!-- notificatoin dropdown start-->
         <ul class="nav pull-right top-menu">
-			 <li class="dropdown" sec:authorize="isAnonymous()">
-            <a class="" href="#"><i class="icon_pencil-edit"></i> Sign up
+		  <li class="dropdown" sec:authorize="isAnonymous()">
+            <a class="" href="#" onclick="document.getElementById('viewFormSignUp').style.display='block'"><i class="icon_pencil-edit"></i> Sign up
             </a>
           </li>
           <li  class="dropdown" sec:authorize="isAnonymous()">
@@ -55,12 +85,13 @@
                             <b class="caret"></b>
                         </a>
             <ul class="dropdown-menu extended logout">
+              <!-- <div class="log-arrow-up"></div> -->
                <li class="eborder-top">
-                <a href="#"><i class="icon_profile"></i>MY PROFILE</a>
+                <a href="#" onclick="showEditUserLogin()"><i class="icon_profile"></i>MY PROFILE</a>
               </li>
               <li>
-                <a href="#"><i class="icon_key_alt"></i>CHANGE PASSWORD</a>
-              </li> 
+                <a href="#" onclick="document.getElementById('viewFormChangePasswordUserLogin').style.display = 'block'"><i class="icon_key_alt"></i>CHANGE PASSWORD</a>
+              </li>
               <li>
                 <a href="/logout"><i class="icon_lock-open_alt"></i>Log Out</a>
               </li>
@@ -308,9 +339,15 @@
     </section>
     <!--main content end-->
   </section>
+  
+  	<th:block th:include="/inc/formSignUp"></th:block>
+	<th:block th:include="/inc/formEditUserLogin"></th:block>
+    <th:block th:include="/inc/formChangePasswordUserLogin"></th:block> 
   <!-- container section end -->
+  
   <!-- javascripts -->
   <script src="/resources/js/jquery.js"></script>
+  <script src="/resources/js/jquery.validate.min.js" type="text/javascript"></script>
   <script src="/resources/js/bootstrap.min.js"></script>
   <!-- nice scroll -->
   <script src="/resources/js/jquery.scrollTo.min.js"></script>
@@ -319,7 +356,11 @@
   <script src="/resources/assets/jquery-knob/js/jquery.knob.js"></script>
   <!--custome script for all page-->
   <script src="/resources/js/scripts.js"></script>
-
+  
+  <script src="/resources/js/validate.js" type="text/javascript"></script>
+  <script src="/resources/js/JsonUser.js" type="text/javascript"></script>
+  <script src="/resources/js/JsonBook.js" type="text/javascript"></script> 
+  <script src="/resources/js/page.js" type="text/javascript"></script>   
   <script>
     //knob
     $(".knob").knob();
