--- a/assignment4/src/main/resources/templates/inc/formChangePasswordUserLogin.html
+++ b/assignment4/src/main/resources/templates/inc/formChangePasswordUserLogin.html
@@ -2,12 +2,20 @@
      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
      sec:authorize="hasAnyRole('ROLE_ADMIN','ROLE_USER')"
 	id="viewFormChangePasswordUserLogin" class="modal text-center">
-           <form class="modal-content animate" id="formChangePasswordUserLogin"  name="formChangePasswordUserLogin">
+           <form class="modal-content animate" id="formChangePasswordUserLogin" method="get" name="formChangePasswordUserLogin">
            <div class="">
 						<button type="button" class="close" onclick="document.getElementById('viewFormChangePasswordUserLogin').style.display='none'" >&times;</button>
 			</div> 
-           <br><h3>CHANGE PASSWORD</h3><br>
+           <br><h3 style="text-align:  center;">CHANGE PASSWORD</h3><br>
         <table style=" width:100%"  class="">
+        <tr id="error" class ="error">
+        	<td></td>
+        	<td></td>
+        </tr>
+        <tr>
+          <td><br></td>
+          <td><br></td>
+         </tr>
         <tr>
           <td><label ><b>Old Password<span style="color: red">(*)</span></b></label></td>
           <td><input autofocus type="text" name="oldPassword" id="oldPassword" class="form-control" autocomplete="off"></td>
@@ -26,7 +34,7 @@
          </tr>
          <tr>
            <td><label><b>Confirm Password<span style="color: red">(*)</span></b></label></td>
-          <td><input type="text" name="rePassword" id="rePassword" class="form-control" autocomplete="off"></td>    
+          <td><input type="text" name="rePassword" class="form-control" autocomplete="off"></td>    
          </tr>
           <tr>
           <td><br></td>
