--- a/assignment4/src/main/resources/templates/admin/detailBook.html
+++ b/assignment4/src/main/resources/templates/admin/detailBook.html
@@ -162,47 +162,48 @@
                   <div class="">
                     <img style="border-radius: 0%;width: 90px; height: 115px;" src="/resources/img/conan1.jpg" alt="">
                   </div>
-                  <h6 style="font-size: 15px; font-weight: bold;" th:text="'Author:'+ ${objBook.author}"></h6>
                 </div>
                 <div class="col-lg-12 col-sm-12 follow-info">
                 <table>
-                <tr>
-	                <td>Author:</td>
-	                <td th:text="${objBook.author}"></td>
-                </tr>
-                <tr>
-	                <td></td>
-	                <td></td>
-                </tr>
-                <tr>
-	                <td>Title:</td>
-	                <td th:text="${objBook.title}"></td>
-                </tr>
-                <tr>
-	                <td></td>
-	                <td></td>
-                </tr>
-                <tr>
-	                <td>Description:</td>
-	                <td th:text="${objBook.description}"></td>
-                </tr>
-                <tr>
-	                <td></td>
-	                <td></td>
-                </tr>
-                <tr>
-	                <td>Created:</td>
-	                <td th:text="${objBook.createdAt}"></td>
-                </tr>
-                
-                <tr>
-	                <td></td>
-	                <td></td>
-                </tr>
-                <tr>
-	                <td>Updated:</td>
-	                <td th:text="${objBook.updatedAt}"></td>
-                </tr>
+	                <tr>
+		                <td>Author</td>
+		                <td th:text="${objBook.author}"></td>
+	                </tr>
+	                <tr>
+		                <td></td>
+		                <td></td>
+	                </tr>
+	                <tr>
+		                <td>Title</td>
+		                <td th:text="${objBook.title}"></td>
+	                </tr>
+	                <tr>
+		                <td></td>
+		                <td></td>
+	                </tr>
+	                <tr>
+		                <td>Created</td>
+		                <td th:text="${objBook.createdAt}"></td>
+	                </tr>
+	                <tr>
+		                <td></td>
+		                <td></td>
+	                </tr>
+	                <tr>
+		                <td>Updated</td>
+		                <td th:text="${objBook.updatedAt}"></td>
+	                </tr>
+	                <tr>
+		                <td></td>
+		                <td></td>
+	                </tr>
+	                <tr>
+		                <td>Description</td>
+		                <td>
+		                	<span th:text="${objBook.description}"></span>
+		                </td>
+	                </tr>
+	               
                 </table>
                   
                 </div>
@@ -222,12 +223,6 @@
                        COMMENT
                     </a>
                   </li>
-                 <!--  <li class="" sec:authorize="hasAnyRole('ROLE_USER','ROLE_ADMIN')">
-                    <a data-toggle="tab" href="#edit-profile">
-                        <i class="icon-envelope"></i>
-                        EDIT BOOK
-                    </a>
-                  </li> -->
                 </ul>
               </header>
               <div class="panel-body">
@@ -293,41 +288,6 @@
                      
                     </div>
                   </div>
-                  <!-- profile -->
-                  <!-- edit-profile -->
-                  <!-- <div id="edit-profile" class="tab-pane" th:each="objBook : ${objBook}" sec:authorize="hasAnyRole('ROLE_USER','ROLE_ADMIN')">
-                    <section class="panel">
-                      <div class="panel-body bio-graph-info">
-                        <h1>Edited Book Information</h1>
-                        <form class="form-horizontal" role="form">
-                          <div class="form-group">
-                            <label class="col-lg-2 control-label">Title</label>
-                            <div class="col-lg-6">
-                              <input type="text" class="form-control" id="title" name="title" th:value="${objBook.title}">
-                            </div>
-                          </div>
-                          <div class="form-group">
-                            <label class="col-lg-2 control-label">Author</label>
-                            <div class="col-lg-6">
-                              <input type="text" class="form-control" id="author" name="author" th:value="${objBook.author}">
-                            </div>
-                          </div>
-                          <div class="form-group">
-                            <label class="col-lg-2 control-label">Description</label>
-                            <div class="col-lg-10">
-                              <textarea th:text="${objBook.description}" name="description" id="description" class="form-control" cols="30" rows="5"></textarea>
-                            </div>
-                          </div>
-                          <div class="form-group">
-                            <div class="col-lg-offset-2 col-lg-10">
-                              <button type="submit" class="btn btn-primary">Save</button>
-                              <button type="reset" class="btn btn-danger">Cancel</button>
-                            </div>
-                          </div>
-                        </form>
-                      </div>
-                    </section>
-                  </div> -->
                 </div>
               </div>
             </section>
