--- a/assignment4/src/main/resources/templates/admin/detailBook.html
+++ b/assignment4/src/main/resources/templates/admin/detailBook.html
@@ -166,7 +166,7 @@
                 <div class="col-lg-12 col-sm-12 follow-info">
                 <table>
                		<tr>
-		                <td><input type="hidden" id="idBook" value="${objBook.idBook}"></td>
+		                <td><input type="hidden" id="idBook" th:value=${objBook.idBook}></td>
 		                <td></td>
 	                </tr>
 	                <tr>
@@ -247,10 +247,10 @@
 	                      <span class="arrow"></span>
 	                       <div class="text">
 	                      	<span style="font-size: 25px;font-weight: bold;">Please leave your comments!</span><br> 
-	                     	 <form class="form-horizontal" role="form">
+	                     	 <form class="form-horizontal" role="form" id="formComment">
 	                          <div class="form-group">
 	                            <div class="col-lg-12">
-	                              <textarea name="description" id="description" class="form-control" cols="30" rows="5"></textarea>
+	                              <textarea name="message" id="message" class="form-control" cols="30" rows="5"></textarea>
 	                            </div>
 	                          </div>
 	                          <div class="form-group">
@@ -266,7 +266,7 @@
                       <h4 sec:authorize="isAnonymous()" style="font: bold;font-size: 25px"><a href="/show-login">Sign in</a> to add your comments</h4>
                     </div>
       <div class="col col-md-12 comment hidden">
-	      <div class="user" style="font-size: 20px;">
+	      <div class="user">
 	      </div>
 	      <div class="comment-content">
 	      </div>
