--- a/assignment4/src/main/resources/templates/admin/book.html
+++ b/assignment4/src/main/resources/templates/admin/book.html
@@ -6,17 +6,13 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 
   <title>Books management</title>
 
-  <!-- Bootstrap CSS -->
   <link href="/resources/css/bootstrap.min.css" rel="stylesheet">
-  <!-- bootstrap theme -->
   <link href="/resources/css/bootstrap-theme.css" rel="stylesheet">
-  <!--external css-->
-  <!-- font icon -->
   <link href="/resources/css/elegant-icons-style.css" rel="stylesheet" />
   <link href="/resources/css/font-awesome.min.css" rel="stylesheet" />
-  <!-- Custom styles -->
   <link href="/resources/css/style.css" rel="stylesheet">
   <link href="/resources/css/style-responsive.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 <style>
 .modal{
     z-index:10;
@@ -65,8 +61,8 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
         <!--  search form start -->
         <ul class="nav top-menu">
           <li>
-            <form class="navbar-form">
-              <input class="form-control" placeholder="Search" type="text">
+            <form id="formSearch" class="navbar-form">
+              <input id="keyword" name = "keyword" class="form-control" placeholder="Search" type="text">
             </form>
           </li>
         </ul>
@@ -166,42 +162,32 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
             <section class="panel">
              <div id="msgResult" style="margin-left: 10px;color: blue; font-size: 20px; font-weight: bold;">  </div><br>
               <div id="result">
-              <table class="table table-striped table-advance table-hover">
-                <tbody>
-                  <tr>
-                    <th><i class=""></i>Title</th>
-                    <th><i class=""></i>Author</th>
+              <table class="table table-striped table-advance table-hover" id="tableResult">
+              <thead>
+              	<tr>
+                    <th><i class="glyphicon glyphicon-sort"></i>Title</th>
+                    <th><i class="glyphicon glyphicon-sort"></i>Author</th>
                     <th><i class=""></i>Date created</th>
                     <th><i class=""></i>Date updated</th>
                     <th sec:authorize="hasAnyRole('ROLE_ADMIN')"><i class=""></i>Status</th>
                     <th ><i class="" ></i> Action</th>
-                  </tr>
-                  <tr th:each="listBook : ${listBook}">
-                    <td th:text="${listBook.title}">..</td>
-                    <td th:utext="${listBook.author}"></td>
-                    <td th:utext="${listBook.createdAt}"></td>
-                    <td th:utext="${listBook.updatedAt}"></td>
-                    <td sec:authorize="hasAnyRole('ROLE_ADMIN')">
-                    	<input type="checkbox" th:checked="${listBook.enabled == 1}" th:onclick="'changeStatusBook('+${listBook.idBook}+','+${listBook.enabled}+')'">
-                    </td>
-                    <td>
-                      <div class="btn-group">
-                      	<a class="btn btn-warning" th:href="@{'/detailBook/' + ${listBook.idBook}}" title="Detail!"><i class="icon_camera_alt"></i></a>
-                        <a sec:authorize="hasAnyRole('ROLE_ADMIN')" class="btn btn-success" th:onclick="'showEditBook(\''+${listBook.idBook}+'\')'" href="#" title="Edit!"><i class="icon_pencil-edit"></i></a>
-                      	<a sec:authorize="hasAnyRole('ROLE_ADMIN')" class="btn btn-danger" th:onclick="' deleteBook(\''+${listBook.idBook}+'\')'" href="#" title="Delete!"><i class="icon_close_alt2"></i></a>
-                      </div>
-                    </td>
-                  </tr>
+                </tr>
+              </thead>
+                <tbody id="tbody">
+                  <tr class="trResult" id="trResult">
+                  </tr> 
                 </tbody>
               </table>
               </div>
             </section>
           </div>
         </div>
+    <input type="hidden" id="idUser" th:value="${userLogin.idUser}">
+  	<input type="hidden" id="idRole" th:value="${userLogin.idRole}">
         <!-- page end-->
          
      <div class="row" id="page">
-         <div class="form-group col-md-1">
+          <div class="form-group col-md-1">
             <select class="form-control pagination" id="pageSizeSelect">
                 <option th:each="pageSize : ${pageSizes}" th:text="${pageSize}" th:value="${pageSize}"
                         th:selected="${pageSize} == ${selectedPageSize}"></option>
@@ -211,25 +197,25 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
             <ul class="pagination">
                 <li th:class="${listBook.number == 0} ? disabled">
                     <a class="pageLink" href="#" 
-                    th:onclick="'pageBook('+${selectedPageSize}+',1)'">&laquo;</a>         
+                    th:onclick="'getAllBooks('+${selectedPageSize}+',1)'">&laquo;</a>         
                 </li>
                 <li th:class="${listBook.number == 0} ? disabled">
                     <a class="pageLink" 
-                    th:onclick="'pageBook('+${selectedPageSize}+','+${listBook.number}+')'" href="#">&larr;</a>
+                    th:onclick="'getAllBooks('+${selectedPageSize}+','+${listBook.number}+')'" href="#">&larr;</a>
                 </li>
                 <li th:class="${listBook.number == (page - 1)} ? 'active pointer-disabled'"
                     th:each="page : ${#numbers.sequence(pager.startPage, pager.endPage)}">
                     <a class="pageLink" href="#"
-                       th:onclick = "'pageBook('+${selectedPageSize}+','+${page}+')'"
+                       th:onclick = "'getAllBooks('+${selectedPageSize}+','+${page}+')'"
                        th:text="${page}"></a>
                 </li>
                 <li th:class="${listBook.number + 1 == listBook.totalPages} ? disabled">
                     <a class="pageLink" href="#"
-                       th:onclick="'pageBook('+${selectedPageSize}+','+${listBook.number + 2}+')'">&rarr;</a>
+                       th:onclick="'getAllBooks('+${selectedPageSize}+','+${listBook.number + 2}+')'">&rarr;</a>
                 </li>
                 <li th:class="${listBook.number + 1 == listBook.totalPages} ? disabled">
                     <a class="pageLink" href="#"
-                    	th:onclick="'pageBook('+${selectedPageSize}+','+${listBook.totalPages}+')'">&raquo;</a>
+                    	th:onclick="'getAllBooks('+${selectedPageSize}+','+${listBook.totalPages}+')'">&raquo;</a>
                 </li>
             </ul>
         </div>
@@ -239,7 +225,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
     </section>
   </section>
   
-     <div id="viewFormEditBook" class="modal text-center">
+     <div id="viewFormEditBook" class="modal text-center" sec:authorize="hasAnyRole('ROLE_USER','ROLE_ADMIN')">
            <form class="modal-content animate" id="formEditBook"  name="formEditBook">
            <div class="">
 						<button type="button" class="close" onclick="document.getElementById('viewFormEditBook').style.display='none'" >&times;</button>
@@ -300,15 +286,12 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 	<th:block th:include="/inc/formEditUserLogin"></th:block>
     <th:block th:include="/inc/formChangePasswordUserLogin"></th:block>     
   
-  <!-- container section end -->
-  <!-- javascripts -->
   <script src="/resources/js/jquery.js"></script>
   <script src="/resources/js/jquery.validate.min.js" type="text/javascript"></script>
   <script src="/resources/js/bootstrap.min.js"></script>
-  <!-- nicescroll -->
+  <script src="/resources/js/bootstrap-confirmation.js"></script>
   <script src="/resources/js/jquery.scrollTo.min.js"></script>
   <script src="/resources/js/jquery.nicescroll.js" type="text/javascript"></script>
-  <!--custome script for all page-->
   <script src="/resources/js/scripts.js"></script>
   
   <script src="/resources/js/validate.js" type="text/javascript"></script>
