--- a/assignment4/src/main/resources/templates/admin/book.html
+++ b/assignment4/src/main/resources/templates/admin/book.html
@@ -163,16 +163,6 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
              <div id="msgResult" style="margin-left: 10px;color: blue; font-size: 20px; font-weight: bold;">  </div><br>
               <div id="result">
               <table class="table table-striped table-advance table-hover" id="tableResult">
-              <thead>
-              	<tr>
-                    <th><i class="glyphicon glyphicon-sort"></i>Title</th>
-                    <th><i class="glyphicon glyphicon-sort"></i>Author</th>
-                    <th><i class=""></i>Date created</th>
-                    <th><i class=""></i>Date updated</th>
-                    <th sec:authorize="hasAnyRole('ROLE_ADMIN')"><i class=""></i>Status</th>
-                    <th ><i class="" ></i> Action</th>
-                </tr>
-              </thead>
                 <tbody id="tbody">
                   <tr class="trResult" id="trResult">
                   </tr> 
@@ -186,14 +176,14 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
   	<input type="hidden" id="idRole" th:value="${userLogin.idRole}">
         <!-- page end-->
          
-     <div class="row" id="page">
+     <div class="row">
           <div class="form-group col-md-1">
             <select class="form-control pagination" id="pageSizeSelect">
                 <option th:each="pageSize : ${pageSizes}" th:text="${pageSize}" th:value="${pageSize}"
                         th:selected="${pageSize} == ${selectedPageSize}"></option>
             </select>
         </div> 
-        <div  class="form-group col-md-11 pagination-centered" id="page2">
+        <div  class="form-group col-md-11 pagination-centered" id="page">
         </div>
     </div>
         
@@ -201,7 +191,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
     </section>
   </section>
   
-     <div id="viewFormEditBook" class="modal text-center" sec:authorize="hasAnyRole('ROLE_USER','ROLE_ADMIN')">
+     <div id="viewFormEditBook" class="modal text-center" sec:authorize="hasAnyRole('ROLE_ADMIN')">
            <form class="modal-content animate" id="formEditBook"  name="formEditBook">
            <div class="">
 						<button type="button" class="close" onclick="document.getElementById('viewFormEditBook').style.display='none'" >&times;</button>
@@ -269,10 +259,11 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
   <script src="/resources/js/jquery.scrollTo.min.js"></script>
   <script src="/resources/js/jquery.nicescroll.js" type="text/javascript"></script>
   <script src="/resources/js/scripts.js"></script>
+  <script src="/resources/js/jquery.twbsPagination.js"></script>
   
   <script src="/resources/js/validate.js" type="text/javascript"></script>
-  <script src="/resources/js/JsonUser.js" type="text/javascript"></script>
-  <script src="/resources/js/JsonBook.js" type="text/javascript"></script> 
+  <script src="/resources/js/jsonUser.js" type="text/javascript"></script>
+  <script src="/resources/js/jsonBook.js" type="text/javascript"></script> 
   <script src="/resources/js/page.js" type="text/javascript"></script>   
 </body>
 
