--- a/assignment4/src/main/resources/templates/admin/detailBook.html
+++ b/assignment4/src/main/resources/templates/admin/detailBook.html
@@ -302,8 +302,8 @@
   <script src="/resources/js/scripts.js"></script>
   
   <script src="/resources/js/validate.js" type="text/javascript"></script>
-  <script src="/resources/js/JsonUser.js" type="text/javascript"></script>
-  <script src="/resources/js/JsonBook.js" type="text/javascript"></script> 
+  <script src="/resources/js/jsonUser.js" type="text/javascript"></script>
+  <script src="/resources/js/jsonBook.js" type="text/javascript"></script> 
   <script src="/resources/js/page.js" type="text/javascript"></script>  
   <script src="/resources/js/jsonComment.js" type="text/javascript"></script>  
   <script>
