--- a/assignment4/src/main/resources/templates/admin/book.html
+++ b/assignment4/src/main/resources/templates/admin/book.html
@@ -61,8 +61,8 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
         <!--  search form start -->
         <ul class="nav top-menu">
           <li>
-            <form id="formSearch" class="navbar-form">
-              <input id="keyword" name = "keyword" class="form-control" placeholder="Search" type="text">
+            <form action="" id="formSearch" class="navbar-form">
+              <input id="keyword" name = "keyword" class="form-control" placeholder="Search" type="text" required="required">
             </form>
           </li>
         </ul>
@@ -178,7 +178,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
          
      <div class="row">
           <div class="form-group col-md-1">
-            <select class="form-control pagination" id="pageSizeSelect">
+            <select class="form-control pagination" id="pageSizeSelect" onclick="changePageAndSize()">
                 <option th:each="pageSize : ${pageSizes}" th:text="${pageSize}" th:value="${pageSize}"
                         th:selected="${pageSize} == ${selectedPageSize}"></option>
             </select>
@@ -191,63 +191,8 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
     </section>
   </section>
   
-     <div id="viewFormEditBook" class="modal text-center" sec:authorize="hasAnyRole('ROLE_ADMIN')">
-           <form class="modal-content animate" id="formEditBook"  name="formEditBook">
-           <div class="">
-						<button type="button" class="close" onclick="document.getElementById('viewFormEditBook').style.display='none'" >&times;</button>
-			</div> 
-           <br><h3>EDIT BOOK</h3><br>
-        <table style=" width:100%"  class="">
-         <tr>
-          <td><input type="hidden" id="idBookEdit" name="idBookEdit" autocomplete="off"></td>
-          <td><br></td>
-         </tr>
-         <tr>
-          <td><input type="hidden" id="idUserBookEdit" name="idUserBookEdit" autocomplete="off"></td>
-          <td><br></td>
-         </tr>
-        <tr>
-          <td><label ><b>Title<span style="color: red">(*)</span></b></label></td>
-          <td><input autofocus type="text" name="titleEdit" id="titleEdit" class="form-control" autocomplete="off"></td>
-         </tr>
-          <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-         <tr>
-          <td><label><b>Author<span style="color: red">(*)</span></b></label></td>
-          <td><input type="text" name="authorEdit" id="authorEdit" class="form-control" autocomplete="off"></td>
-         </tr>
-          <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-         <tr>
-          <td><label><b>Description</b></label></td>
-          <td>
-          	<textarea style="margin: 0px; height: 200px;" name="descriptionEdit" cols="30" id="descriptionEdit" class="form-control"></textarea>
-          </td>    
-         </tr>
-          <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-         <tr>
-          <td></td>
-          <td>
-            <input type="submit" value="UPDATE" class="btn btn-primary">
-            <input type="reset" value="CANCEL" class="btn btn-danger"
-              onclick="document.getElementById('viewFormEditBook').style.display='none'">
-          </td>
-         </tr>
-          <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-        </table>
-       </form>
-    </div>
 
+	<th:block th:include="/inc/formEditBook"></th:block>
 	<th:block th:include="/inc/formSignUp"></th:block>
 	<th:block th:include="/inc/formEditUserLogin"></th:block>
     <th:block th:include="/inc/formChangePasswordUserLogin"></th:block>     
@@ -264,7 +209,6 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
   <script src="/resources/js/validate.js" type="text/javascript"></script>
   <script src="/resources/js/jsonUser.js" type="text/javascript"></script>
   <script src="/resources/js/jsonBook.js" type="text/javascript"></script> 
-  <script src="/resources/js/page.js" type="text/javascript"></script>   
 </body>
 
 </html>
