--- a/assignment4/src/main/resources/templates/admin/user.html
+++ b/assignment4/src/main/resources/templates/admin/user.html
@@ -6,20 +6,12 @@
 
   <title>Users management 3</title>
 
-  <!-- Bootstrap CSS -->
   <link href="/resources/css/bootstrap.min.css" rel="stylesheet">
-  <!-- bootstrap theme -->
   <link href="/resources/css/bootstrap-theme.css" rel="stylesheet">
-  <!--external css-->
-  <!-- font icon -->
   <link href="/resources/css/elegant-icons-style.css" rel="stylesheet" />
   <link href="/resources/css/font-awesome.min.css" rel="stylesheet" />
-  <!-- Custom styles -->
   <link href="/resources/css/style.css" rel="stylesheet">
   <link href="/resources/css/style-responsive.css" rel="stylesheet" />
-  <!-- <script type="text/javascript">
-	
-</script> -->
 <style>
 .modal{
     z-index:10;
@@ -56,12 +48,9 @@
         <div class="icon-reorder tooltips" data-original-title="Toggle Navigation" data-placement="bottom"><i class="icon_menu"></i></div>
       </div>
 
-      <!--logo start-->
       <a href="/" class="logo">Books <span class="lite"> Management</span></a>
-      <!--logo end-->
 
       <div class="nav search-row" id="top_menu">
-        <!--  search form start -->
         <ul class="nav top-menu">
           <li>
             <form class="navbar-form">
@@ -69,13 +58,10 @@
             </form>
           </li>
         </ul>
-        <!--  search form end -->
       </div>
 
       <div class="top-nav notification-row">
-        <!-- notificatoin dropdown start-->
         <ul class="nav pull-right top-menu">
-          <!-- user login dropdown start-->
           <li class="dropdown" sec:authorize="hasAnyRole('ROLE_USER','ROLE_ADMIN')">
             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <span class="profile-ava">
@@ -85,7 +71,6 @@
                             <b class="caret"></b>
                         </a>
              <ul class="dropdown-menu extended logout">
-              <!-- <div class="log-arrow-up"></div> -->
                <li class="eborder-top">
                 <a href="#" onclick="showEditUserLogin()"><i class="icon_profile"></i>MY PROFILE</a>
               </li>
@@ -97,17 +82,12 @@
               </li>
             </ul>
           </li>
-          <!-- user login dropdown end -->
         </ul>
-        <!-- notificatoin dropdown end-->
       </div>
     </header>
-    <!--header end-->
 
-    <!--sidebar start-->
     <aside sec:authorize="hasAnyRole('ROLE_USER','ROLE_ADMIN')">
       <div id="sidebar" class="nav-collapse ">
-        <!-- sidebar menu start-->
         <ul class="sidebar-menu">
           <li class="" sec:authorize="hasAnyRole('ROLE_ADMIN')">
             <a class="" href="/admin/allUser">
@@ -135,11 +115,9 @@
           </li>
 
         </ul>
-        <!-- sidebar menu end-->
       </div>
     </aside>
 
-    <!--main content start-->
     <section id="main-content">
       <section class="wrapper">
        <div class="row">
@@ -159,32 +137,33 @@
 			<div id="msgResult" style="margin-left: 10px; font-size: 20px; font-weight: bold;">  </div><br>
 			<div id="result">
               <table class="table table-striped table-advance table-hover">
+	              <thead>
+	             	 <tr>
+	                    <th><i class=""></i> Full Name</th>
+	                    <th><i class=""></i> Email</th>
+	                    <th sec:authorize="hasAnyRole('ROLE_ADMIN')"><i class=""></i> Active</th>
+	                    <th><i class=""></i> Role</th>
+	                    <th style="text-align: center;" sec:authorize="hasAnyRole('ROLE_ADMIN')"><i class="" ></i> Action</th>
+	                  </tr>
+	              </thead>
                 <tbody>
-                  <tr>
-                    <th><i class=""></i> Full Name</th>
-                    <th><i class=""></i> Email</th>
-                    <th sec:authorize="hasAnyRole('ROLE_ADMIN')"><i class=""></i> Active</th>
-                    <th><i class=""></i> Role</th>
-                    <th sec:authorize="hasAnyRole('ROLE_ADMIN')"><i class="" ></i> Action</th>
-                  </tr>
                   <tr th:each="listUser : ${listUser}">
                     <td th:text="${listUser.firstName}+' '+${listUser.lastName}">..</td>
                     <td th:text="${listUser.email}"></td>
                     <td sec:authorize="hasAnyRole('ROLE_ADMIN')">
-                    	<input type="checkbox" th:checked="${listUser.enabled == 1}" th:onclick="'changeStatus('+${listUser.idUser}+','+${listUser.enabled}+')'">          
+                    	<input th:disabled="${listUser.email} == 'admin@gmail.com' ? disabled" type="checkbox" th:checked="${listUser.enabled == 1}" th:onclick="'changeStatus('+${listUser.idUser}+','+${listUser.enabled}+')'">          
                     </td>
                      <td> 
-                     	<!-- <span th:if="${listUser.idRole == 1}" th:text="admin"></span> -->
                      	<div th:switch="${listUser.idRole}">
 	           				 <p th:case="1">admin</p>
 	           				  <p th:case="*">user</p>
 						</div>
                     </td> 
                     
-                    <td sec:authorize="hasAnyRole('ROLE_ADMIN')">
+                    <td sec:authorize="hasAnyRole('ROLE_ADMIN')" style="text-align: center;">
                       <div class="btn-group">
                         <a  class="btn btn-success" th:onclick="'showEditUser(\''+${listUser.idUser}+'\')'" href="#" title="Edit!"><i class="icon_pencil-edit"></i></a>
-                        <a  class="btn btn-danger" th:onclick="' deleteUser(\''+${listUser.idUser}+'\')'" href="#" title="Delete!"><i class="icon_close_alt2"></i></a>    
+                        <a th:if="${listUser.email} != 'admin@gmail.com'" class="btn btn-danger" th:onclick="' deleteUser(\''+${listUser.idUser}+'\')'" href="#" title="Delete!"><i class="icon_close_alt2"></i></a>    
                       </div>
                     </td>
                   </tr>
@@ -194,187 +173,20 @@
             </section>
           </div>
         </div>
-        <!-- page end-->
       </section>
     </section>
   </section>
-      <div id="viewFormAddUser" class="modal text-center" sec:authorize="hasAnyRole('ROLE_ADMIN')">
-           <form class="modal-content animate" id="formAddUser"  name="formAddUser">
-           <div class="">
-						<button type="button" class="close" onclick="document.getElementById('viewFormAddUser').style.display='none'" >&times;</button>
-			</div> 
-           <br><h3>ADD NEW USER</h3><br>
-        <table style=" width:100%"  class="">
-        <tr>
-          <td><label ><b>FirstName</b></label></td>
-          <td><input autofocus type="text" name="firstName" id="firstName" class="form-control" autocomplete="off"></td>
-         </tr>
-          <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-         <tr>
-          <td><label ><b>LastName</b></label></td>
-          <td><input  type="text" name="lastName" id="lastName" class="form-control" autocomplete="off"></td>
-         </tr>
-          <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-         <tr id="check">
-          <td><label ><b>Email<span style="color: red">(*)</span></b></label></td>
-          <td><input onblur="return checkEmail()" value="" autocomplete="off" type="email" name="email" id="email" class="form-control" required></td>
-         </tr>
-          <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-         
-          <tr>
-          <td><label ><b>Role</b></label></td>
-          <td>
-          	<select name="idRole" id="idRole">
-          		<option value="2">Mod</option>
-          		<option value="1">Admin</option>
-          		
-          	</select>
-          </td>
-         </tr>
-          <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-         
-         <tr>
-          <td><label ><b>Password<span style="color: red">(*)</span></b></label></td>
-          <td> <input autocomplete="off" type="password" name="password" id="password" class="form-control"></td>
-         </tr>
-         <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-         <tr>
-          <td><label ><b>Confirm Password<span style="color: red">(*)</span></b></label></td>
-          <td> <input autocomplete="off" type="password" name="rePassword" id="rePassword" class="form-control"></td>
-         </tr>
-         <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-         <tr>
-          <td></td>
-          <td>
-            <input type="submit" value="ADD USER" class="btn btn-primary">
-            <input type="reset" value="CANCEL" class="btn btn-danger"
-              onclick="document.getElementById('viewFormAddUser').style.display='none'">
-            
-          </td>
-         </tr>
-          <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-        </table>
-       </form>
-    </div>
-    
-    <div id="viewFormEditUser" class="modal text-center" sec:authorize="hasAnyRole('ROLE_ADMIN')">
-           <form class="modal-content animate" id="formEditUser" name="formEditUser">
-           <div class="">
-						<button type="button" class="close" onclick="document.getElementById('viewFormEditUser').style.display='none'" >&times;</button>
-			</div> 
-           <br><h3>EDIT USER</h3><br>
-          <!--  <p style="color: red">(*)Not be empty!</p> -->
-        <table style=" width:100%"  class="">
-        <tr>
-          <td><input type="hidden" id="idUserEdit" name="idUserEdit" autocomplete="off"></td>
-          <td><br></td>
-         </tr>
-        <tr>
-          <td><label ><b>FirstName</b></label></td>
-          <td><input autofocus type="text" name="firstName" id="firstNameEdit" class="form-control" autocomplete="off"></td>
-         </tr>
-          <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-         <tr>
-          <td><label ><b>LastName</b></label></td>
-          <td><input type="text" name="lastName" id="lastNameEdit" class="form-control" autocomplete="off"></td>
-         </tr>
-          <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-         <tr>
-          <td><label ><b>Email<span style="color: red">(*)</span></b></label></td>
-          <td><input type="email" name="email" id="emailEdit" class="form-control" disabled="disabled" autocomplete="off"></td>
-         </tr>
-         <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-         <tr>
-          <td><label><b>Password</b></label></td>
-          <td> <input type="password" name="passwordEdit" id="passwordEdit" class="form-control" autocomplete="off"></td>
-         </tr>
-         <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-         <tr>
-          <td><label ><b>Confirm Password</b></label></td>
-          <td> <input type="password" name="rePasswordEdit" id="rePasswordEdit" class="form-control" autocomplete="off"></td>
-         </tr>
-          <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-         
-          <tr>
-          <td><label ><b>Role</b></label></td>
-          <td>
-          	<select name="idRole" id="idRoleEdit">
-          		<option value="2">Mod</option>
-          		<option value="1">Admin</option>
-          		
-          	</select>
-          </td>
-         </tr>
-          <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-         
-         <tr>
-          <td></td>
-          <td>
-            <input type="submit" value="UPDATE" class="btn btn-primary">
-            <input type="reset" value="CANCEL" class="btn btn-danger"
-              onclick="document.getElementById('viewFormEditUser').style.display='none'">
-            
-          </td>
-         </tr>
-          <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-        </table>
-       </form>
-    </div>
-  
+
+    <th:block th:include="/inc/formAddEditUser"></th:block>
     <th:block th:include="/inc/formEditUserLogin"></th:block>
     <th:block th:include="/inc/formChangePasswordUserLogin"></th:block> 
-  <!-- container section end -->
-  <!-- java scripts -->
+    
   <script src="/resources/js/jquery.js" type="text/javascript"></script>
   <script src="/resources/js/jquery.validate.min.js" type="text/javascript"></script>
   
   <script src="/resources/js/bootstrap.min.js" type="text/javascript"></script>
-  <!-- nice scroll -->
   <script src="/resources/js/jquery.scrollTo.min.js" type="text/javascript"></script>
   <script src="/resources/js/jquery.nicescroll.js" type="text/javascript"></script>
-  <!--custom script for all page-->
   <script src="/resources/js/scripts.js" type="text/javascript"></script>
   <script src="/resources/js/validate.js" type="text/javascript"></script>
   <script src="/resources/js/jsonUser.js" type="text/javascript"></script>
