--- a/assignment4/src/main/resources/templates/admin/user.html
+++ b/assignment4/src/main/resources/templates/admin/user.html
@@ -34,6 +34,9 @@
     padding-left: 2%;
     border-radius: 10px;
 }
+.hidden {
+   display:none;
+}
 </style>
 </head>
 
@@ -116,7 +119,7 @@
         </ul>
       </div>
     </aside>
-
+<!-- <input disabled="disabled"> -->
     <section id="main-content">
       <section class="wrapper">
        <div class="row">
