--- a/assignment4/src/main/resources/templates/inc/formChangePasswordUserLogin.html
+++ b/assignment4/src/main/resources/templates/inc/formChangePasswordUserLogin.html
@@ -18,7 +18,7 @@
          </tr>
         <tr>
           <td><label ><b>Old Password<span style="color: red">(*)</span></b></label></td>
-          <td><input autofocus type="text" name="oldPassword" id="oldPassword" class="form-control" autocomplete="off"></td>
+          <td><input autofocus type="password" name="oldPassword" id="oldPassword" class="form-control" autocomplete="off"></td>
          </tr>
           <tr>
           <td><br></td>
@@ -26,7 +26,7 @@
          </tr>
          <tr>
           <td><label><b>New Password<span style="color: red">(*)</span></b></label></td>
-          <td><input type="text" name="newPassword" id="newPassword" class="form-control" autocomplete="off"></td>
+          <td><input type="password" name="newPassword" id="newPassword" class="form-control" autocomplete="off"></td>
          </tr>
           <tr>
           <td><br></td>
@@ -34,7 +34,7 @@
          </tr>
          <tr>
            <td><label><b>Confirm Password<span style="color: red">(*)</span></b></label></td>
-          <td><input type="text" name="rePassword" class="form-control" autocomplete="off"></td>    
+          <td><input type="password" name="rePassword" class="form-control" autocomplete="off"></td>    
          </tr>
           <tr>
           <td><br></td>
